--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,23 @@ apiVersion: v1
 entries:
   secrets-store-csi-driver:
   - apiVersion: v2
+    appVersion: 1.5.1
+    created: "2025-06-26T19:00:45.679247591Z"
+    description: A Helm chart to install the SecretsStore CSI Driver inside a Kubernetes
+      cluster.
+    digest: faffe7e630adbd132627d294490ba4a9a12c3ba5163fa6b8348718d0e35bd39c
+    icon: https://github.com/kubernetes/kubernetes/blob/master/logo/logo.png
+    kubeVersion: '>=1.16.0-0'
+    maintainers:
+    - email: ritazh@microsoft.com
+      name: Rita Zhang
+    name: secrets-store-csi-driver
+    sources:
+    - https://github.com/kubernetes-sigs/secrets-store-csi-driver
+    urls:
+    - https://benjaminapetersen.github.io/secrets-store-csi-driver/charts/secrets-store-csi-driver-1.5.1.tgz
+    version: 1.5.1
+  - apiVersion: v2
     appVersion: 1.4.6
     created: "2024-10-22T03:55:21.996532369Z"
     description: A Helm chart to install the SecretsStore CSI Driver inside a Kubernetes
@@ -732,4 +749,4 @@ entries:
     urls:
     - https://kubernetes-sigs.github.io/secrets-store-csi-driver/charts/secrets-store-csi-driver-0.0.9.tgz
     version: 0.0.9
-generated: "2024-10-22T03:55:21.994470894Z"
+generated: "2025-06-26T19:00:45.678108357Z"
